ems: Hmm, SSN/4 really should say SSN and not SUN in the latex file

--- a/libraries/ems/ssn4.tex
+++ b/libraries/ems/ssn4.tex
@@ -10,8 +10,8 @@
 % -----------------------------------------------------------------------------
 % ? Document identification
 % Fixed part
-\newcommand{\stardoccategory}  {Starlink User Note}
-\newcommand{\stardocinitials}  {SUN}
+\newcommand{\stardoccategory}  {Starlink System Note}
+\newcommand{\stardocinitials}  {SSN}
 \newcommand{\stardocsource}    {sun\stardocnumber}
 \newcommand{\stardoccopyright}
 {Copyright \copyright\ 2001 Council for the Central Laboratory of the Research
