latexsupport: various tweaks
- old .aux files from pdf build should break htlatex with pgfsyspdfmark
- cleaned up and improved starlink_basic.css file

--- a/applications/latexsupport/starabbrev.sty
+++ b/applications/latexsupport/starabbrev.sty
@@ -185,3 +185,7 @@
 \providecommand{\fitslist}{\xref{\task{fitslist}}{sun95}{FITSLIST}}
 \providecommand{\display}{\xref{\task{display}}{sun95}{DISPLAY}}
 \providecommand{\topcat}{\xref{\textsc{Topcat}}{sun253}{}}
+
+% prevent issues if a pdf .aux file is still around
+\providecommand{\pgfsyspdfmark}[3]{}
+
