cvg: Actually mention SUN/55

--- a/libraries/cvg/sun268.tex
+++ b/libraries/cvg/sun268.tex
@@ -507,7 +507,7 @@ CVG provides utility functions for handling data format conversion tasks.
 \section {Introduction}
 
 This library contains routines that originally formed part of the CONVERT
-application package, but which are are of more general use and so have
+application package (SUN/55), but which are are of more general use and so have
 been moved into a separate library.
 
 \appendix
