gsd: Tweak gsdGet0x internal ref

--- a/libraries/gsd/sun229.tex
+++ b/libraries/gsd/sun229.tex
@@ -257,12 +257,12 @@ Find GSD item by name
 
 % The funny htmlref is required because the sstroutine name
 % includes < and > symbols
-\item[\htmlref{gsdGet0x}{gsdGet0_SPMlt_t_SPMgt_}] \mbox{}
+\item[\htmlref{gsdGet0x}{gsdGet0x}] \mbox{}
 
 Get a scalar value from a GSD file
 
 % similarly for gsdGet1x
-\item[\htmlref{gsdGet1x}{gsdGet1_SPMlt_t_SPMgt_}] \mbox{}
+\item[\htmlref{gsdGet1x}{gsdGet1x}] \mbox{}
 
 Get an array from a GSD file
 
@@ -433,7 +433,7 @@ form \texttt{GSD\_XXX} rather than \texttt{gsdXxx}.
    }
 }
 \sstroutine{
-   gsdGet0$<$t$>$
+   gsdGet0x
 }{
    Get a scalar value from a GSD file
 }{
@@ -528,7 +528,7 @@ form \texttt{GSD\_XXX} rather than \texttt{gsdXxx}.
    }
 }
 \sstroutine{
-   gsdGet1$<$t$>$
+   gsdGet1x
 }{
    Get an array from a GSD file
 }{
